# obs-premiere-patch

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
src/: av_utils.cpp  av_utils.h  marker-patch.cpp  marker-patch.h  menu.cpp  plugin-main.c  xmp_box.cpp  xmp_box.h
